kubernetes/qdrant.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qdrant
  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qdrant-deployment
  namespace: qdrant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qdrant
  template:
    metadata:
      labels:
        app: qdrant
    spec:
      containers:
      - name: qdrant
        image: qdrant/qdrant:latest
        ports:
          - containerPort: 6333
        volumeMounts:
          - mountPath: /qdrant/storage/
            name: qdrant-storage
      volumes:
      - name: qdrant-storage
        persistentVolumeClaim:
          claimName: qdrant-storage

---
apiVersion: v1
kind: Service
metadata:
  name: qdrant-service
  namespace: qdrant
spec:
  type: ClusterIP
  selector:
    app: qdrant
  ports:
  - name: qdrant-port
    targetPort: 6333
    port: 6333

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qdrant-ingress
  namespace: qdrant
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: "qdrant.minum.ncsa.illinois.edu"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: qdrant-service
            port:
              number: 80
