kubernetes/qdrant_ingress_local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qdrant-ingress
  namespace: qdrant
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: "qdrant.localhost"
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: qdrant-service
              port:
                number: 6333
